--- a/carrito/style.css
+++ b/carrito/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 .container {
-    width: 80%;
+    width: 100%;
     margin: 0 auto;
     padding: 20px;
     background-color: white;
@@ -14,12 +14,14 @@ body {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
+
+
 h1 {
     text-align: center;
 }
 
 table {
-    width: 100%;
+    width: 75%;
     border-collapse: collapse;
     margin-bottom: 20px;
 }
@@ -31,11 +33,14 @@ table th, table td {
 
 table th {
     background-color: #f8f8f8;
+    
 }
 
 .total {
     text-align: right;
     font-size: 1.5em;
+    height: 10px;
+    margin: 5%;
 }
 
 button {
