--- a/carrito/style.css
+++ b/carrito/style.css
@@ -32,15 +32,17 @@ table th, table td {
 }
 
 table th {
-    background-color: #f8f8f8;
-    
+    background-color: #e0e0e0;
+
 }
 
 .total {
+    background-color: #E0E0E0;
     text-align: right;
     font-size: 1.5em;
-    height: 10px;
+    height: 80px;
     margin: 5%;
+  
 }
 
 button {
