--- a/carrito/style.css
+++ b/carrito/style.css
@@ -6,8 +6,8 @@ body {
 }
 
 .container {
-    width: 100%;
-    margin: 0 auto;
+    width: 90%;
+    margin:  auto;
     padding: 20px;
     background-color: white;
     margin-top: 50px;
@@ -34,15 +34,18 @@ table th, table td {
 table th {
     background-color: #e0e0e0;
 
+
 }
 
 .total {
     background-color: #E0E0E0;
     text-align: right;
     font-size: 1.5em;
-    height: 80px;
-    margin: 5%;
-  
+    width: 20%;
+    padding: 30px;
+    border: 1px solid;
+    box-shadow: 0 2px 5px ;
+    margin-left: auto;
 }
 
 button {
