--- a/EjemploAPI_REST - copia/src/app/app.component.html
+++ b/EjemploAPI_REST - copia/src/app/app.component.html
@@ -1,5 +1,5 @@
 <header class="bg-secondary p-3 border-4 border-bottom border-black shadow">
-  <h1 class="h4 text-white">Usuario</h1>
+  <h1 class="h4 text-white">En Ocasiones veo series</h1>
 </header>
 <main class="mt-4">
   <div class="container">
