--- a/UD4_ Actividad_API-RST/src/app/pages/form-usuario/form-usuario.component.html
+++ b/UD4_ Actividad_API-RST/src/app/pages/form-usuario/form-usuario.component.html
@@ -27,6 +27,11 @@
             <input type="text" id="image" class="form-control" formControlName="image">
         </div>
 
+        <div class="mt-3">
+            <label for="pasword" class="form-label">contaseña</label>
+            <input type="text" id="pasword" class="form-control" formControlName="pasword">
+        </div>
+
         <div class="d-flex gap-2 mt-4">
             <input type="submit" value="Guardar" class="btn btn-danger" [disabled]="!usuarioForm.valid">
             <a [routerLink]="['/usuario']" class="btn btn-warning">Volver</a>
